--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
+    "@types/react-dom": "^17.0.3",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
