--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.3.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
     "@types/react-dom": "^17.0.3",
