--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
